package com.yazilimsistemtasarim.auth_service.entity;

public enum Role {
    USER,
    ADMIN
}
